--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,18 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>Spring Boot WebSocket Chat Application</title>
   <link rel="stylesheet" href="css/main.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
-  <noscript>
-    <h2>Sorry! Your browser doesn't support Javascript</h2>
-  </noscript>
 
   <div id="username-page">
     <div class="username-page-container">
       <h1 class="title">Press "Start Chatting" to enter the Chatroom</h1>
       <form id="usernameForm" name="usernameForm">
-
         <div class="form-group">
           <button type="submit" class="accent username-submit">Start Chatting</button>
         </div>
@@ -24,30 +23,55 @@
     </div>
   </div>
 
-  <div id="chat-page" class="hidden">
-    <div class="chat-container">
-      <div class="chat-header">
-        <h2>Public Chat</h2>
-      </div>
-      <div class="connecting">
-        Connecting...
-      </div>
-      <ul id="messageArea">
 
-      </ul>
-      <form id="messageForm" name="messageForm">
-        <div class="form-group">
-          <div class="input-group clearfix">
-            <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control" />
-            <button type="submit" class="primary">Send</button>
+  <div class="row">
+
+    <div class="col-1"></div>
+
+    <div id="online-list" class="col-3 pt-4 hidden">
+      <div class="list-group d-flex justify-content-center" id="list-tab" role="tablist">
+        <li class="list-group-item list-group-item-action" data-toggle="list" href="#list-item" role="tab">ONLINE
+          USERS <i class="fa fa-circle" aria-hidden="true" style="color: green;"></i>
+        </li>
+      </div>
+      <div id="online-list-to-load" class="list-group" id="list-tab" role="tablist">
+        <a class="list-group-item list-group-item-action" data-toggle="list" href="#list-item" role="tab">Home</a>
+      </div>
+
+    </div>
+    <div class="col-8">
+      <div id="chat-page" class="hidden">
+        <div class="chat-container">
+          <div class="chat-header">
+            <h2>Public Chat</h2>
           </div>
+          <div class="connecting">
+            Connecting...
+          </div>
+          <ul id="messageArea">
+
+          </ul>
+          <form id="messageForm" name="messageForm">
+            <div class="form-group">
+              <div class="input-group clearfix">
+                <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
+                  class="form-control" />
+                <button type="submit" class="primary">Send</button>
+              </div>
+            </div>
+          </form>
         </div>
-      </form>
+      </div>
+
     </div>
   </div>
 
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
 </body>
 
