--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,15 +4,125 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>Spring Boot WebSocket Chat Application</title>
-  <link rel="stylesheet" href="css/main.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main1.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
 
+
   <div id="username-page">
+    <div class="username-page-container">
+      <h1 class="title">Press "Start Chatting" to enter the Chatroom</h1>
+      <form id="usernameForm" name="usernameForm">
+        <div class="form-group">
+          <button type="submit" class="accent username-submit">Start Chatting</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+
+  <main id="chat-page" class="content hidden">
+
+    <div class="container p-0">
+
+      <h1 class="h3 mb-3">Messages</h1>
+
+      <div class="card">
+        <div class="row g-0">
+          <div class="col-12 col-lg-5 col-xl-3 border-right">
+
+            <div class="px-4 d-none d-md-block">
+              <div class="d-flex align-items-center">
+                <div class="flex-grow-1">
+                  <input type="text" class="form-control my-3" placeholder="Search...">
+                </div>
+              </div>
+            </div>
+
+            <a href="#" class="list-group-item list-group-item-action border-0">
+              <div class="badge bg-success float-right">5</div>
+              <div class="d-flex align-items-start">
+                <img src="https://bootdey.com/img/Content/avatar/avatar5.png" class="rounded-circle mr-1"
+                  alt="Vanessa Tucker" width="40" height="40">
+                <div class="flex-grow-1 ml-3">
+                  Vanessa Tucker
+                  <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action border-0">
+              <div class="d-flex align-items-start">
+                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1"
+                  alt="Sharon Lessman" width="40" height="40">
+                <div class="flex-grow-1 ml-3">
+                  Sharon Lessman
+                  <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action border-0">
+              <div class="d-flex align-items-start">
+                <img src="https://bootdey.com/img/Content/avatar/avatar4.png" class="rounded-circle mr-1"
+                  alt="Christina Mason" width="40" height="40">
+                <div class="flex-grow-1 ml-3">
+                  Christina Mason
+                  <div class="small"><span class="fas fa-circle chat-offline"></span> Offline</div>
+                </div>
+              </div>
+            </a>
+
+            <hr class="d-block d-lg-none mt-1 mb-0">
+          </div>
+          <div class="col-12 col-lg-7 col-xl-9">
+            <div class="py-2 px-4 border-bottom d-none d-lg-block">
+              <div class="d-flex align-items-center py-1">
+                <div class="position-relative">
+                  <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1"
+                    alt="Sharon Lessman" width="40" height="40">
+                </div>
+                <div class="flex-grow-1 pl-3">
+                  <strong>Sharon Lessman</strong>
+                  <div class="text-muted small"><em>Typing...</em></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="position-relative">
+              <div class="chat-messages p-4">
+
+                <div class="chat-message-right pb-4">
+                  <div>
+                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="rounded-circle mr-1"
+                      alt="Chris Wood" width="40" height="40">
+                    <div class="text-muted small text-nowrap mt-2">2:33 am</div>
+                  </div>
+                  <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                    <div class="font-weight-bold mb-1">You</div>
+                    Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="flex-grow-0 py-3 px-4 border-top">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Type your message">
+                <button class="btn btn-primary">Send</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- <div id="username-page">
     <div class="username-page-container">
       <h1 class="title">Press "Start Chatting" to enter the Chatroom</h1>
       <form id="usernameForm" name="usernameForm">
@@ -64,13 +174,16 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
 </body>
