--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>Spring Boot WebSocket Chat Application</title>
-  <link rel="stylesheet" href="css/main1.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main1.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -25,7 +25,7 @@
   </div>
 
 
-  <main id="chat-page" class="content hidden">
+  <main id="main-page" class="content hidden">
 
     <div class="container p-0">
 
@@ -33,17 +33,17 @@
 
       <div class="card">
         <div class="row g-0">
-          <div class="col-12 col-lg-5 col-xl-3 border-right">
+          <div id="online-list-to-load" class="col-12 col-lg-5 col-xl-3 border-right">
 
-            <div class="px-4 d-none d-md-block">
+            <!-- <div class="px-4 d-none d-md-block">
               <div class="d-flex align-items-center">
                 <div class="flex-grow-1">
                   <input type="text" class="form-control my-3" placeholder="Search...">
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <a href="#" class="list-group-item list-group-item-action border-0">
+            <!-- <a href="#" class="list-group-item list-group-item-action border-0">
               <div class="badge bg-success float-right">5</div>
               <div class="d-flex align-items-start">
                 <img src="https://bootdey.com/img/Content/avatar/avatar5.png" class="rounded-circle mr-1"
@@ -53,8 +53,8 @@
                   <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>
                 </div>
               </div>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action border-0">
+            </a> -->
+            <!-- <a href="#" class="list-group-item list-group-item-action border-0">
               <div class="d-flex align-items-start">
                 <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1"
                   alt="Sharon Lessman" width="40" height="40">
@@ -63,8 +63,8 @@
                   <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>
                 </div>
               </div>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action border-0">
+            </a> -->
+            <!-- <a href="#" class="list-group-item list-group-item-action border-0">
               <div class="d-flex align-items-start">
                 <img src="https://bootdey.com/img/Content/avatar/avatar4.png" class="rounded-circle mr-1"
                   alt="Christina Mason" width="40" height="40">
@@ -73,7 +73,7 @@
                   <div class="small"><span class="fas fa-circle chat-offline"></span> Offline</div>
                 </div>
               </div>
-            </a>
+            </a> -->
 
             <hr class="d-block d-lg-none mt-1 mb-0">
           </div>
@@ -92,29 +92,34 @@
             </div>
 
             <div class="position-relative">
-              <div class="chat-messages p-4">
 
-                <div class="chat-message-right pb-4">
-                  <div>
-                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="rounded-circle mr-1"
-                      alt="Chris Wood" width="40" height="40">
-                    <div class="text-muted small text-nowrap mt-2">2:33 am</div>
+
+              <div id="chat-page">
+                <div class="chat-container">
+                  <div class="chat-header">
+                    <h2>Public Chat</h2>
                   </div>
-                  <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
-                    <div class="font-weight-bold mb-1">You</div>
-                    Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.
+                  <div class="connecting">
+                    Connecting...
                   </div>
+                  <ul id="messageArea">
+
+                  </ul>
+                  <form id="messageForm" name="messageForm">
+                    <div class="form-group">
+                      <div class="input-group clearfix">
+                        <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
+                          class="form-control" />
+                        <button type="submit" class="primary">Send</button>
+                      </div>
+                    </div>
+                  </form>
                 </div>
-
               </div>
+
+
             </div>
 
-            <div class="flex-grow-0 py-3 px-4 border-top">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Type your message">
-                <button class="btn btn-primary">Send</button>
-              </div>
-            </div>
 
           </div>
         </div>
