--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,6 +34,9 @@
       <div class="card">
         <div class="row g-0">
           <div id="online-list-to-load" class="col-12 col-lg-5 col-xl-3 border-right">
+            <ul id="testnigi">
+
+            </ul>
 
             <!-- <div class="px-4 d-none d-md-block">
               <div class="d-flex align-items-center">
@@ -190,7 +193,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main-v2.js"></script>
 </body>
 
 </html>
